feat: add initial working with iframe

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "peerDependencies": {
     "react": ">=18.0.0",
     "react-native": ">=0.76.0",
-    "react-native-webview": ">=13.0.0"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
